--- a/auth/server/package.json
+++ b/auth/server/package.json
@@ -4,12 +4,17 @@
   "description": "We will be creating an authentication server completely from scratch.",
   "main": "index.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "jwt-simple": "^0.5.5",
     "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
